--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/Logo.png" rel="icon">
-  <link href="assets/img/Logo.png" rel="apple-touch-icon">
+  <link href="assets/img/SparkleLogo.png" rel="icon">
+  <link href="assets/img/SparkleLogo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -84,7 +84,7 @@
       <h1 class="heroTitle"> <img class="logo" width="60px" height="60px" src="assets/img/LogoWhite.png"> Sparkle
         Digital</h1>
       <h2>We are a team of talented Virtual Assistants, adding a touch of sparkle to your tasks and projects</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#pricing" class="btn-get-started scrollto">Get Started</a>
     </div>
 
   </section><!-- End Hero -->
@@ -689,7 +689,7 @@
                 <li>Search Engine Optimization (SEO)</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -706,7 +706,7 @@
                 <li>Strategy Development</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -723,7 +723,7 @@
                 <li>Media Strategy Services </li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -744,7 +744,7 @@
                 <li>Social Media Graphics </li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -762,7 +762,7 @@
 
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -779,7 +779,7 @@
                 <li>Visual elements</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Subscribe</a>
+                <a href="#contactus" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -923,10 +923,8 @@
                 </div>
               </div> -->
             </div>
-
           </div>
-
-          <div class="col-lg-6 ">
+          <div class="col-lg-6" id="contactus">
 
             <div class="col-md-12">
               <div class="info-box mb-4">
@@ -935,28 +933,73 @@
                 <h5><strong>info@sparkledigital.org</strong><br></h5>
               </div>
             </div>
+            <div>
+              <form class="border bg-white shadow" action="https://formspree.io/f/xnqykqqj" method="POST">
+                <h2 class="text-center mt-4">Contact Us</h2>
+                <div class="row px-4 mt-4">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="firstname" class="form-control" id="firstname" placeholder="Fisrtname" required>
+                  </div>
+                  <div class="col-md-6 form-group mb-4">
+                    <input type="text" name="lastname" class="form-control" id="lastname" placeholder="Lastname" required>
+                  </div>
+                  <div class="col-md-12 form-group mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  </div>
 
-            <form class="border bg-white shadow" action="https://formspree.io/f/xnqykqqj" method="POST">
-              <div class="row px-4 mt-4">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <div class="mt-3">
+                    <h2 class="text-center mt-4">Choose Services</h2>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input" name="Web Design" type="checkbox" value="Web Design" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">
+                        Web Design
+                      </label>
+                    </div>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input"  name="MarketStrategies" type="checkbox" value="Market Strategies" id="flexCheckChecked" >
+                      <label class="form-check-label" for="flexCheckChecked">
+                        Market Strategies
+                      </label>
+                    </div>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input" name="SocialMediaStrategies" type="checkbox" value="Social Media Strategies" id="flexCheckChecked">
+                      <label class="form-check-label" for="flexCheckChecked">
+                        Social Media Strategies
+                      </label>
+                    </div>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input" name=" ContentCreations" type="checkbox" value="Content Creations" id="flexCheckChecked" >
+                      <label class="form-check-label" for="flexCheckChecked">
+                        Content Creations
+                      </label>
+                    </div>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input"  name="BrandingPhotography" type="checkbox" value="Branding Photography" id="flexCheckChecked">
+                      <label class="form-check-label" for="flexCheckChecked">
+                        Branding Photography
+                      </label>
+                    </div>
+                    <div class="col-md-12 form-group mt-3 mt-md-0">
+                      <input class="form-check-input" name="BrandingDesign" type="checkbox" value="Branding Design" id="flexCheckChecked" >
+                      <label class="form-check-label" for="flexCheckChecked">
+                        Branding Design
+                      </label>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                <div class="form-group mt-3 px-4">
+                  <textarea class="form-control message" name="message" rows="5" placeholder="Message"
+                    required></textarea>
                 </div>
-              </div>
-              <div class="form-group mt-3 px-4">
-                <textarea class="form-control message" name="message" rows="5" placeholder="Message"
-                  required></textarea>
-              </div>
-              <div class="my-3">
-                <!-- <div class="loading">Loading</div> -->
-                <div class="error-message"></div>
-                <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
-              </div>
-              <div class="text-center mb-4"><button type="submit" class="btn btn-primary">Send Message</button>
-              </div>
-            </form>
+                <div class="my-3">
+                  <!-- <div class="loading">Loading</div> -->
+                  <div class="error-message"></div>
+                  <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                </div>
+                <div class="text-center mb-4"><button type="submit" class="btn btn-primary">Send Message</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
 
